Add technical skills table

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -6,7 +6,7 @@
     <title>Natalia Migallón</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Kiwi+Maru:wght@300;400;500&family=Merriweather:wght@300&family=Montserrat:wght@300&family=Open+Sans&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Kiwi+Maru:wght@300;400;500&family=Open+Sans&display=swap"
       rel="stylesheet"
     />
     <script
@@ -26,9 +26,11 @@
       </div>
       <button type="button" class="about__cv">
         <a href="./assets/images/CV-Natalia-Migallón-Front-end-CASTELLANO.pdf"
-          >Ver CV</a
-        >
+          >VER CV <i class="far fa-eye"></i
+        ></a>
       </button>
+      <!-- <div class="about__wrapper">
+        <div> -->
       <p class="about__text">
         ¡Hola! Soy Natalia Migallón, programadora front-end e historiadora del
         arte.
@@ -47,12 +49,49 @@
           href="https://adalab.es/"
           target="_blank"
           >Adalab</a
-        >, en donde he aprendido nuevos lenguajes y distintas formas de pensar,
-        convirtiéndose el código en un ente indispensable en mi vida.
+        >, donde he aprendido nuevos lenguajes y distintas formas de pensar,
+        convirtiéndose el código en un elemento indispensable en mi vida.
       </p>
-      <p class="about__text"></p>
-      <h3 class="about__stack">Stack Tecnológico:</h3>
-      <ul>
+      <!-- </div>
+        <div> -->
+      <!-- <section class="about__stack">
+        <h3 class="about__stack--title">Stack Tecnológico</h3>
+        <p class="about__stack--text">
+          HTML5, CSS3, Flexbox, CSS Grid, SASS, BEM, Bootstrap.
+          <i class="about__hard--icons fab fa-html5"></i
+          ><i class="about__hard--icons fab fa-css3-alt"></i
+          ><i class="about__hard--icons fab fa-sass"></i
+          ><i class="about__hard--icons fab fa-bootstrap"></i>
+        </p>
+      </section> -->
+      <!-- <table class="about__stack--table">
+        <tr>
+          <td class="about__stack--text">
+            <h4 class="about__stack--title">Maquetación:</h4>
+            HTML5, CSS3, Flexbox, CSS Grid, SASS, BEM, Bootstrap.
+          </td>
+          <td><i
+            class="about__hard--icons fab fa-html5"
+          ></i
+          ><i class="about__hard--icons fab fa-css3-alt"></i
+          ><i class="about__hard--icons fab fa-sass"></i
+          ><i class="about__hard--icons fab fa-bootstrap"></i></td>
+          <td class="about__stack--text">
+            <h4 class="about__stack--title">Lenguajes:</h4>
+            JavaScript (ES6) y servicios web (APIs) de terceros.
+          </td>
+          <td class="about__stack--text">
+            Creación de SPAs sencillas con React.
+          </td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+
+      </table> -->
+      <!-- <ul>
         <li class="about__stack--text">
           Maquetación: HTML5, CSS3, Flexbox, CSS Grid, SASS, BEM, Bootstrap.
         </li>
@@ -77,15 +116,16 @@
           borrado lógico de registros.
         </li>
         <li class="about__stack--text">
-          Trabajo en remoto: Slack, Zoom, Discord, GitHub, GitHub projects,
-          VSCode, Gulp, Terminal, Linter, Zeplin.
+          Trabajo en remoto: Slack, Zoom, Discord, GitHub.
         </li>
         <li class="about__stack--text">
           Experiencia en planificación y ejecución de proyectos bajo el marco de
           trabajo Scrum y filosofía Agile.
         </li>
-      </ul>
-      <h3 class="about__hard">Hard Skills:</h3>
+      </ul> -->
+      <!-- </div>
+      </div> -->
+      <!-- <h3 class="about__hard">Hard Skills:</h3>
       <i class="about__hard--icons fab fa-html5"></i
       ><i class="about__hard--icons fab fa-css3-alt"></i
       ><i class="about__hard--icons fab fa-sass"></i
@@ -94,7 +134,7 @@
       ><i class="about__hard--icons fab fa-react"></i
       ><i class="about__hard--icons fab fa-bootstrap"></i
       ><i class="about__hard--icons fab fa-node"></i
-      ><i class="about__hard--icons fab fa-git-alt"></i>
+      ><i class="about__hard--icons fab fa-git-alt"></i> -->
       <h3 class="about__soft">Soft Skills:</h3>
       <p class="about__soft--text">
         Compromiso, trabajo en equipo, dedicación.
