--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -6,7 +6,7 @@
     <title>Natalia Migallón</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Kiwi+Maru:wght@300;400;500&family=Merriweather:wght@300&family=Montserrat:wght@300&family=Open+Sans&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Kiwi+Maru:wght@300;400;500&family=Open+Sans&display=swap"
       rel="stylesheet"
     />
     <script
