--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,17 +9,16 @@
       href="https://fonts.googleapis.com/css2?family=Kiwi+Maru:wght@300;400;500&family=Merriweather:wght@300&family=Montserrat:wght@300&family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <script
-      src="https://kit.fontawesome.com/d31a9c1094.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/d31a9c1094.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./assets/css/main.css" />
     <link rel="icon" href="./assets/images/favicon-nat-beige.png" />
   </head>
 
   <body class="page-home">
-      <include src="./partials/main.html"></include>
-      <include src="./partials/footer.html"></include>
+    <a href="./assets/files/pdf-de-prueba.pdf" download>PDF de prueba</a>
+
+    <include src="./partials/main.html"></include>
+    <include src="./partials/footer.html"></include>
     <script src="./assets/js/main.js"></script>
   </body>
 </html>
