--- a/src/html/about.html
+++ b/src/html/about.html
@@ -25,7 +25,9 @@
         <span class="about__title--icon">( )</span>
       </div>
       <button type="button" class="about__cv">
-        <a href="./assets/images/CV-Natalia-Migallón-Front-end-CASTELLANO.pdf"
+        <a
+          href="./assets/files/CV-Natalia-Migallon-Front-end-CASTELLANO.pdf"
+          target="_blank"
           >VER CV <i class="far fa-eye"></i
         ></a>
       </button>
@@ -54,16 +56,18 @@
       </p>
       <!-- </div>
         <div> -->
-      <!-- <section class="about__stack">
+      <section class="about__stack">
         <h3 class="about__stack--title">Stack Tecnológico</h3>
-        <p class="about__stack--text">
-          HTML5, CSS3, Flexbox, CSS Grid, SASS, BEM, Bootstrap.
-          <i class="about__hard--icons fab fa-html5"></i
-          ><i class="about__hard--icons fab fa-css3-alt"></i
-          ><i class="about__hard--icons fab fa-sass"></i
-          ><i class="about__hard--icons fab fa-bootstrap"></i>
-        </p>
-      </section> -->
+        <div class="about__stack--grid">
+          <p class="about__stack--text">
+            HTML5, CSS3, Flexbox, CSS Grid, SASS, BEM, Bootstrap.
+            <i class="about__hard--icons fab fa-html5"></i
+            ><i class="about__hard--icons fab fa-css3-alt"></i
+            ><i class="about__hard--icons fab fa-sass"></i
+            ><i class="about__hard--icons fab fa-bootstrap"></i>
+          </p>
+        </div>
+      </section>
       <!-- <table class="about__stack--table">
         <tr>
           <td class="about__stack--text">
