Add grid for desktop and some variables

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -24,13 +24,13 @@
         <h1 class="about__title--h1">Sobre mí</h1>
         <span class="about__title--icon">( )</span>
       </div>
-      <button type="button" class="about__cv">
+      <!-- <button type="button" class="about__cv">
         <a
           href="./assets/files/CV-Natalia-Migallon-Front-end-CASTELLANO.pdf"
           target="_blank"
           >VER CV <i class="far fa-eye"></i
         ></a>
-      </button>
+      </button> -->
       <p class="about__text">
         ¡Hola! Soy Natalia Migallón, programadora front-end e historiadora del
         arte.
@@ -55,16 +55,24 @@
       <section class="stack">
         <h3 class="stack__title">Stack Tecnológico</h3>
         <div class="stack__grid">
-          <p class="stack__grid--layout">Maquetación</p>
+          <h4 class="stack__grid--layout">Maquetación</h4>
           <i class="stack__grid--icons fab fa-html5"></i
           ><i class="stack__grid--icons fab fa-css3-alt"></i
           ><i class="stack__grid--icons fab fa-sass"></i
           ><i class="stack__grid--icons fab fa-bootstrap"></i>
+          <h4 class="stack__grid--languages">Lenguajes</h4>
+          <i class="stack__grid--icons fab fa-js-square"></i
+          ><i class="stack__grid--icons fab fa-node"></i>
+          <i class="stack__grid--icons fab fa-gulp"></i>
+          <h4 class="stack__grid--framework">Librerías</h4>
+          <i class="stack__grid--icons fab fa-react"></i>
+          <h4 class="stack__grid--version">Otras</h4>
+          <i class="stack__grid--icons fab fa-git-alt"></i>
         </div>
       </section>
       <h3 class="about__soft">Soft Skills:</h3>
       <p class="about__soft--text">
-        Compromiso, trabajo en equipo, dedicación.
+        Compromiso | Trabajo en equipo | Empatía | Dedicación
       </p>
       <a href="#arrow" class="about__arrow"
         ><i class="far fa-arrow-alt-circle-up"></i
