Add wishlist and cv

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -13,6 +13,7 @@
       src="https://kit.fontawesome.com/d31a9c1094.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     <link rel="stylesheet" href="./assets/css/main.css" />
     <link rel="icon" href="./assets/images/favicon-nat-beige.png" />
   </head>
@@ -53,7 +54,7 @@
         convirtiéndose el código en un elemento indispensable en mi vida.
       </p>
       <section class="stack">
-        <h3 class="stack__title">Stack Tecnológico</h3>
+        <h3 class="stack__title">Stack Tecnológico:</h3>
         <div class="stack__grid">
           <h4 class="stack__grid--layout">Maquetación</h4>
           <i class="stack__grid--icons fab fa-html5"></i
@@ -66,13 +67,33 @@
           <i class="stack__grid--icons fab fa-gulp"></i>
           <h4 class="stack__grid--framework">Librerías</h4>
           <i class="stack__grid--icons fab fa-react"></i>
-          <h4 class="stack__grid--version">Otras</h4>
+          <h4 class="stack__grid--version">Otros</h4>
           <i class="stack__grid--icons fab fa-git-alt"></i>
+          <span
+            class="stack__grid--icons photoshop iconify"
+            data-icon="file-icons:adobe-photoshop"
+            data-inline="false"
+          ></span>
         </div>
       </section>
       <h3 class="about__soft">Soft Skills:</h3>
       <p class="about__soft--text">
-        Compromiso | Trabajo en equipo | Empatía | Dedicación
+        | Compromiso | Trabajo en equipo | Empatía | Dedicación | Curiosidad |
+      </p>
+      <h3 class="about__wishlist">Wishlist:</h3>
+      <p class="about__pd">
+        Actualmente estoy buscando mi primera experiencia laboral en el mundo de
+        la programación. Para ello sigo formándome y tratando de ampliar los
+        conocimientos ya adquiridos. Me gustaría formar parte de un equipo donde el compañerismo y la profesionalidad sean los principales pilares. Un lugar donde continuar mi aprendizaje y en el cual pueda aportar con mis conocimientos.</p>
+        <p class="about__pd">Estoy encantada de colaborar en cualquier
+        proyecto interesante que se me ponga por delante. Si quieres conocerme un poco más
+        en profundidad puedes echar un vistazo a mi
+        <a
+          href="./assets/files/CV-Natalia-Migallon-Front-end-CASTELLANO.pdf"
+          target="_blank"
+          class="about__pd--cv"
+          >curriculum</a
+        >.
       </p>
       <a href="#arrow" class="about__arrow"
         ><i class="far fa-arrow-alt-circle-up"></i
