--- a/src/html/about.html
+++ b/src/html/about.html
@@ -61,49 +61,28 @@
           >curriculum</a
         >.
       </p>
-      <!-- <section class="stack">
-        <h3 class="stack__title">Stack Tecnológico:</h3>
-        <div class="stack__grid">
-          <h4 class="stack__grid--layout">Maquetación</h4>
-          <i class="stack__grid--icons fab fa-html5"></i
-          ><i class="stack__grid--icons fab fa-css3-alt"></i
-          ><i class="stack__grid--icons fab fa-sass"></i
-          ><i class="stack__grid--icons fab fa-bootstrap"></i>
-          <h4 class="stack__grid--languages">Lenguajes</h4>
-          <i class="stack__grid--icons fab fa-js-square"></i
-          ><i class="stack__grid--icons fab fa-node"></i>
-          <i class="stack__grid--icons fab fa-gulp"></i>
-          <h4 class="stack__grid--framework">Librerías</h4>
-          <i class="stack__grid--icons fab fa-react"></i>
-          <h4 class="stack__grid--version">Otros</h4>
-          <i class="stack__grid--icons fab fa-git-alt"></i>
-          <span
-            class="stack__grid--icons photoshop iconify"
-            data-icon="file-icons:adobe-photoshop"
-            data-inline="false"
-          ></span>
+      <div class="wrapper-tech-soft">
+        <div class="about__tech">
+          <p class="about__tech--center_">Technical<br />Skills</p>
+          <i class="about__tech--icons deg0_ fab fa-html5"></i
+          ><i class="about__tech--icons deg40 fab fa-css3-alt"></i
+          ><i class="about__tech--icons deg80 fab fa-sass"></i
+          ><i class="about__tech--icons deg120 fab fa-bootstrap"></i>
+          <i class="about__tech--icons deg160 fab fa-js-square"></i
+          ><i class="about__tech--icons deg200 fab fa-node"></i>
+          <i class="about__tech--icons deg240 fab fa-gulp"></i>
+          <i class="about__tech--icons deg280 fab fa-react"></i>
+          <i class="about__tech--icons deg320 fab fa-git-alt"></i>
         </div>
-      </section> -->
-      <div class="circle-container-tech">
-        <p class="center_">Technical<br />Skills</p>
-        <i class="stack__grid--icons deg0_ fab fa-html5"></i
-        ><i class="stack__grid--icons deg40 fab fa-css3-alt"></i
-        ><i class="stack__grid--icons deg80 fab fa-sass"></i
-        ><i class="stack__grid--icons deg120 fab fa-bootstrap"></i>
-        <i class="stack__grid--icons deg160 fab fa-js-square"></i
-        ><i class="stack__grid--icons deg200 fab fa-node"></i>
-        <i class="stack__grid--icons deg240 fab fa-gulp"></i>
-        <i class="stack__grid--icons deg280 fab fa-react"></i>
-        <i class="stack__grid--icons deg320 fab fa-git-alt"></i>
-      </div>
-      <div class="circle-container">
-        <p class="center">Soft<br />Skills</p>
-        <p class="deg0">Empatía</p>
-        <p class="deg45">Comunicación</p>
-        <p class="deg135">Compromiso</p>
-        <p class="deg180">Curiosidad</p>
-        <p class="deg225">Dedicación</p>
-        <p class="deg315">Trabajo en equipo</p>
+        <div class="about__soft">
+          <p class="about__soft--center">Soft<br />Skills</p>
+          <p class="deg0">Empatía</p>
+          <p class="deg45">Comunicación</p>
+          <p class="deg135">Compromiso</p>
+          <p class="deg180">Curiosidad</p>
+          <p class="deg225">Dedicación</p>
+          <p class="deg315">Trabajo <br/> en equipo</p>
+        </div>
       </div>
       <a href="#arrow" class="about__arrow"
         ><i class="far fa-arrow-alt-circle-up"></i
