Add mixins and variables

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -58,7 +58,7 @@
           href="./assets/files/CV-Natalia-Migallon-Front-end-CASTELLANO.pdf"
           target="_blank"
           class="about__text--cv"
-          >curriculum</a
+          >curriculum <i class="about__text--cv-icon fas fa-id-badge"></i></a
         >.
       </p>
       <div class="wrapper-tech-soft">
@@ -81,7 +81,10 @@
           <p class="deg135">Compromiso</p>
           <p class="deg180">Curiosidad</p>
           <p class="deg225">Dedicación</p>
-          <p class="deg315">Trabajo <br/> en equipo</p>
+          <p class="deg315">
+            Trabajo <br />
+            en equipo
+          </p>
         </div>
       </div>
       <a href="#arrow" class="about__arrow"
