--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -29,20 +29,30 @@
           href="https://www.linkedin.com/in/nataliamigallon/"
           target="_blank"
           class="icons icon__linkedin"
+          title="LinkedIn"
           ><i class="fab fa-linkedin"></i
         ></a>
         <a
           href="https://github.com/NataliaMigallon"
           target="_blank"
           class="icons icon__github"
+          title="GitHub"
           ><i class="icon__github fab fa-github"></i
         ></a>
         <a
           href="mailto:natmigallon@gmail.com"
           target="_blank"
           class="icons icon__email"
+          title="Email"
           ><i class="fas fa-envelope"></i
         ></a>
+        <a
+        href="./assets/files/CV-Natalia-Migallon-Front-end-CASTELLANO.pdf"
+        target="_blank"
+        class="icons icon__cv"
+        title="Curriculum"
+        ><i class="icon__cv fas fa-id-badge"></i
+      ></a>
       </span>
       <form
         autocomplete="off"
