Add new text about section

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -37,12 +37,13 @@
       </p>
       <p class="about__text">
         Tras una tímida incursión en el mundo HTML tiempo atrás, fue hace unos
-        meses cuando me lancé al mundo de la programación web de la mano de
+        meses cuando me lancé al mundo de la programación web estudiando un
+        bootcamp en la
         <a
           class="about__text--adaLink"
           href="https://adalab.es/"
           target="_blank"
-          >Adalab</a
+          >Adalab - Escuela Digital</a
         >. Aquí he aprendido nuevos lenguajes y distintas formas de pensar,
         convirtiéndose el código en un elemento indispensable en mi vida.
       </p>
@@ -52,13 +53,29 @@
         tratando de ampliar conocimientos ya adquiridos. Dado que a programar se
         aprende "picando" código, estoy dispuesta a colaborar en cualquier
         proyecto que sea interesante, en el que poder demostrar mi entusiasmo y
-        ganas de continuar aprendiendo. Si quieres conocer un poco más sobre mi
-        trayectoria profesional puedes echar un vistazo a mi
+        ganas de continuar aprendiendo.
+      </p>
+      <p class="about__text">
+        Si quieres conocer un poco más sobre mi trayectoria profesional puedes
+        echar un vistazo a mi
         <a
           href="./assets/files/CV-Natalia-Migallon-Front-end-CASTELLANO.pdf"
           target="_blank"
           class="about__text--cv"
           >curriculum <i class="about__text--cv-icon fas fa-id-badge"></i></a
+        >, y también escribirme a través de este
+        <a
+          href="https://nataliamigallon.github.io/portfolio-natalia-migallon/contact.html"
+          class="about__text--form"
+          >formulario</a
+        >
+        o mandarme un
+        <a
+          href="mailto:natmigallon@gmail.com"
+          target="_blank"
+          class="about__text--email"
+          title="Email"
+          >correo <i class="about__text--email-icon fas fa-envelope"></i></a
         >.
       </p>
       <div class="wrapper-tech-soft">
