--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -18,6 +18,18 @@
   </head>
 
   <body class="page-contact">
+    <div class="lds-roller loader">
+      <div class="container">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    </div>
     <include src="./partials/header.html"></include>
     <main class="contact">
       <div class="contact__title">
