--- a/src/html/about.html
+++ b/src/html/about.html
@@ -19,6 +19,18 @@
   </head>
 
   <body class="page-about">
+    <div class="lds-roller loader">
+      <div class="container">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    </div>
     <include src="./partials/header.html"></include>
     <main class="about">
       <div class="about__title">
