--- a/src/html/index.html
+++ b/src/html/index.html
@@ -18,6 +18,18 @@
   </head>
 
   <body class="page-home">
+    <div class="lds-roller loader">
+      <div class="container">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    </div>
     <include src="./partials/main.html"></include>
     <include src="./partials/footer.html"></include>
     <script src="./assets/js/main.js"></script>
