--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -18,6 +18,18 @@
   </head>
 
   <body class="page-projects">
+    <div class="lds-roller loader">
+      <div class="container">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    </div>
     <include src="./partials/header.html"></include>
     <main class="projects">
       <div class="projects__title">
