--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -18,18 +18,7 @@
   </head>
 
   <body class="page-projects">
-    <div class="lds-roller loader">
-      <div class="container">
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-    </div>
+    <include src="./partials/loader.html"></include>
     <include src="./partials/header.html"></include>
     <main class="projects">
       <div class="projects__title">
