--- a/src/html/about.html
+++ b/src/html/about.html
@@ -19,18 +19,7 @@
   </head>
 
   <body class="page-about">
-    <div class="lds-roller loader">
-      <div class="container">
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-    </div>
+    <include src="./partials/loader.html"></include>
     <include src="./partials/header.html"></include>
     <main class="about">
       <div class="about__title">
