--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -18,18 +18,7 @@
   </head>
 
   <body class="page-contact">
-    <div class="lds-roller loader">
-      <div class="container">
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-    </div>
+    <include src="./partials/loader.html"></include>
     <include src="./partials/header.html"></include>
     <main class="contact">
       <div class="contact__title">
