--- a/src/html/index.html
+++ b/src/html/index.html
@@ -18,19 +18,8 @@
   </head>
 
   <body class="page-home">
-    <div class="lds-roller loader">
-      <div class="container">
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-    </div>
-    <include src="./partials/main.html"></include>
+    <include src="./partials/loader.html"></include>
+    <include src="./partials/main-home.html"></include>
     <include src="./partials/footer.html"></include>
     <script src="./assets/js/main.js"></script>
   </body>
