Edit about text

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -32,7 +32,7 @@
       </p>
       <p class="about__text">
         Desde muy joven he sentido atracción por todo lo que rodea a la cultura
-        visual; desde las cuevas de Altamira hasta el diseño gráfico
+        visual; desde la cueva de Altamira hasta el diseño gráfico
         contemporáneo, cuya presencia en la tecnología es esencial como vehículo
         comunicativo.
       </p>
