Edit about text

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -49,12 +49,12 @@
         convirtiéndose el código en un elemento indispensable en mi vida.
       </p>
       <p class="about__text">
-        Actualmente estoy buscando mi primera experiencia laboral en el mundo de
-        la programación. Para ello sigo formándome en nuevas tecnologías y
-        tratando de ampliar conocimientos ya adquiridos. Dado que a programar se
-        aprende "picando" código, estoy dispuesta a colaborar en cualquier
-        proyecto que sea interesante, en el que poder demostrar mi entusiasmo y
-        ganas de continuar aprendiendo.
+        Actualmente estoy buscando experiencias laborales en el mundo de la
+        programación. Para ello sigo formándome en nuevas tecnologías y tratando
+        de ampliar conocimientos ya adquiridos. Dado que a programar se aprende
+        "picando" código, estoy dispuesta a colaborar en cualquier proyecto que
+        sea interesante, en el que poder demostrar mi entusiasmo y ganas de
+        continuar aprendiendo.
       </p>
       <p class="about__text">
         Si quieres conocer un poco más sobre mi trayectoria profesional puedes
